--- a/tidy.css
+++ b/tidy.css
@@ -62,57 +62,69 @@ body header #header-cont #header-circle {
   border-radius: 50%;
   mix-blend-mode: multiply;
 }
-body header nav {
+body #main-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: flex-end;
-  align-items: center;
+  align-items: flex-start;
+  position: absolute;
   width: 100vw;
+  height: 10vh;
+  background-color: clear;
+  z-index: 999;
 }
-body header nav #mob-nav-button:checked ~ #nav-list {
-  transform: translateX(0%);
+body #main-container #desk-nav-icon {
+  display: none;
 }
-body header nav #mob-nav-icon {
-  align-self: center;
-  justify-self: center;
+body #main-container #mob-nav-button,
+body #main-container #desk-nav-button {
+  display: none;
+}
+body #main-container #mob-nav-button:checked ~ #nav-list {
+  transform: translateX(0vw);
+}
+body #main-container #mob-nav-button:checked ~ main {
+  transform: translateX(50vw);
+}
+body #main-container #mob-nav-icon {
+  align-self: flex-start;
+  justify-self: flex-end;
   padding: 1rem;
   font-size: 2rem;
+  background-color: red;
+  z-index: 999;
   color: rgb(83, 75, 58);
 }
-body header nav #nav-list {
+body #main-container #nav-list {
+  z-index: 100;
   background-color: rgb(249, 247, 242);
   position: absolute;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   top: 10vh;
-  width: 100vw;
+  width: 50vw;
   height: 90vh;
   padding: 5rem;
-  transform: translateX(-100%);
   transition: 0.5s;
 }
-body header nav #nav-list li {
+body #main-container #nav-list li {
   text-align: center;
   font-family: "Karla", sans-serif;
   font-size: 1.5rem;
 }
-body header nav #desk-nav-icon {
-  display: none;
-}
-body header nav #mob-nav-button,
-body header nav #desk-nav-button {
-  display: none;
-}
-body main {
+
+main {
   background-color: rgb(249, 247, 242);
   position: relative;
   top: 10vh;
   min-height: 100vh;
   margin-bottom: 5rem;
   font-family: "Karla", sans-serif;
+  transform: translateX(0vw);
+  transition: 0.5s;
 }
-body main section {
+main .content {
   background-color: rgb(249, 247, 242);
   display: flex;
   flex-direction: column;
@@ -121,35 +133,36 @@ body main section {
   padding: 1rem;
   padding-bottom: 0;
 }
-body main section .desk-page-sub {
+main .content .desk-page-sub {
   display: none;
 }
-body main section #about-img-cont {
+main .content #about-img-cont {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-body main section #about-img-cont img {
+main .content #about-img-cont img {
   border-radius: 1rem 1rem 1rem 1rem;
   max-width: 100%;
 }
-body main section .card {
+main .content .card {
   margin: 1rem 0rem;
   padding: 1rem;
   background-color: rgb(249, 247, 242);
   border-radius: 1rem 1rem 1rem 1rem;
 }
-body main section .card h2 {
+main .content .card h2 {
   text-align: center;
   font-family: "Karla", sans-serif;
 }
-body main section .container {
+main .content .container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
 }
-body footer {
+
+footer {
   z-index: 10;
   position: fixed;
   display: flex;
@@ -162,7 +175,7 @@ body footer {
   background-color: rgb(249, 247, 242);
   box-shadow: 0px 0px 5px black;
 }
-body footer #footer-text {
+footer #footer-text {
   font-family: "Karla", sans-serif;
 }
 
