--- a/tidy.css
+++ b/tidy.css
@@ -7,6 +7,7 @@
 html,
 body {
   min-height: 120vh;
+  overflow-x: hidden;
 }
 
 a {
@@ -28,7 +29,6 @@ body {
   background-color: green;
   position: relative;
   list-style: none;
-  overflow-x: hidden;
 }
 body header {
   z-index: 10;
@@ -158,11 +158,10 @@ main .content .card h2 {
   text-align: center;
   font-family: "Karla", sans-serif;
 }
-main .content .container {
+main .content .container form {
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-between;
   width: 100vw;
 }
 
