--- a/tidy.scss
+++ b/tidy.scss
@@ -29,6 +29,7 @@ $monaco: "Monaco", monospace;
 html,
 body {
   min-height: 120vh;
+  overflow-x: hidden;
 }
 
 a {
@@ -50,7 +51,6 @@ body {
   background-color: green; //
   position: relative;
   list-style: none;
-  overflow-x: hidden;
   header {
     z-index: 10;
     position: fixed;
@@ -184,11 +184,18 @@ main {
       }
     }
     .container {
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center;
-      width: 100vw;
+      // display: flex;
+      // flex-direction: row;
+      // justify-content: center;
+      // align-items: center;
+      // width: 100vw;
+      form {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        width: 100vw;
+        // justify-self: center;
+      }
 
     }
   }
