--- a/tidy.css
+++ b/tidy.css
@@ -158,11 +158,11 @@ main .content .card h2 {
   text-align: center;
   font-family: "Karla", sans-serif;
 }
-main .content .container form {
+main .content .container {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
-  width: 100vw;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
 footer {
