--- a/tidy.scss
+++ b/tidy.scss
@@ -184,18 +184,10 @@ main {
       }
     }
     .container {
-      // display: flex;
-      // flex-direction: row;
-      // justify-content: center;
-      // align-items: center;
-      // width: 100vw;
-      form {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-        width: 100vw;
-        // justify-self: center;
-      }
+      display: flex;
+      flex-direction: row;
+      justify-content: space-evenly;
+      align-items: center;
 
     }
   }
