--- a/tidy.css
+++ b/tidy.css
@@ -26,7 +26,7 @@ a {
 }
 
 body {
-  background-color: green;
+  background-color: rgb(249, 247, 242);
   position: relative;
   list-style: none;
 }
@@ -37,7 +37,7 @@ body header {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  height: 10vh;
+  height: 4rem;
   width: 100vw;
   background-color: rgb(249, 247, 242);
   box-shadow: 0px 0px 5px black;
@@ -69,7 +69,7 @@ body #main-container {
   justify-content: flex-start;
   align-items: flex-start;
   width: 100vw;
-  height: 10vh;
+  height: 4rem;
   z-index: 999;
 }
 body #main-container #desk-nav-icon {
