--- a/tidy.scss
+++ b/tidy.scss
@@ -118,7 +118,7 @@ body {
     #nav-list {
       z-index: 9;
       background-color: $white;
-      position: absolute;
+      position: fixed;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -177,6 +177,10 @@ main {
       h2 {
         text-align: center;
         font-family: $karla;
+      }
+      img {
+        @include card-border();
+        max-width: 100%;
       }
     }
     .container {
