--- a/tidy.scss
+++ b/tidy.scss
@@ -16,7 +16,7 @@ $rammetto: "Rammetto One", cursive;
 $monaco: "Monaco", monospace;
 //MIXINS
 @mixin box-shadow() {
-  box-shadow: 0px 0px 5px black;
+  box-shadow: 0px 0px 5px gray;
 }
 @mixin card-border() {
   border-radius: 1rem 1rem 1rem 1rem;
@@ -117,20 +117,23 @@ body {
     }
     #nav-list {
       z-index: 9;
-      background-color: $white;
       position: fixed;
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
-      top: 10vh;
-      left: -1rem;
+      top: 6rem;
+      left: -2rem;
       width: 50vw;
       height: 90vh;
       padding: 5rem;
+      background-color: $white;
+      @include box-shadow(); 
+      @include card-border();
       transform: translateX(-50vw);
       transition: 0.5s;
       li {
+        padding-left: 2rem;
         text-align: center;
         font-family: $karla;
         font-size: 1.5rem;
