--- a/tidy.css
+++ b/tidy.css
@@ -15,7 +15,15 @@ a {
   color: rgb(83, 75, 58);
 }
 
-.button {
+body {
+  background-color: rgb(249, 247, 242);
+  position: relative;
+  list-style: none;
+}
+body p {
+  color: rgb(57, 57, 57);
+}
+body .button {
   padding: 0.5rem;
   min-width: 5rem;
   height: 2rem;
@@ -23,12 +31,6 @@ a {
   border-radius: 0.5rem 0.5rem 0.5rem 0.5rem;
   background-color: rgb(76, 0, 255);
   color: white;
-}
-
-body {
-  background-color: rgb(249, 247, 242);
-  position: relative;
-  list-style: none;
 }
 body header {
   z-index: 10;
@@ -141,17 +143,25 @@ main .content {
 main .content .desk-page-sub {
   display: none;
 }
+main .content figure {
+  margin: 1rem 0;
+}
+main .content figure img {
+  border-radius: 1rem 1rem 1rem 1rem;
+  max-width: 100%;
+}
 main .content #about-img-cont {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
-}
-main .content #about-img-cont img {
-  border-radius: 1rem 1rem 1rem 1rem;
-  max-width: 100%;
+  padding: 0;
+  margin: 0;
 }
 main .content .card {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
   margin: 1rem 0rem;
   padding: 1rem;
   background-color: rgb(249, 247, 242);
@@ -160,16 +170,60 @@ main .content .card {
 main .content .card h2 {
   text-align: center;
   font-family: "Karla", sans-serif;
+  color: rgb(76, 0, 255);
 }
 main .content .card img {
   border-radius: 1rem 1rem 1rem 1rem;
   max-width: 100%;
+}
+main .content .card label {
+  position: relative;
+}
+main .content .card label a {
+  position: absolute;
+  top: -10rem;
+}
+main .content .card .expand {
+  max-height: 20rem;
+  overflow: hidden;
+  -webkit-mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgb(0, 0, 0) 20%);
+  mask-image: linear-gradient(to top, rgba(0, 0, 0, 0), rgb(0, 0, 0));
+  transition: 0.5s;
+}
+main .content .card .expand-icon {
+  align-self: center;
+  color: rgb(76, 0, 255);
+}
+main .content .card #expand-check1:checked ~ #blog1,
+main .content .card #expand-check2:checked ~ #blog2,
+main .content .card #expand-check3:checked ~ #blog3,
+main .content .card #expand-check4:checked ~ #blog4,
+main .content .card #expand-check5:checked ~ #blog5 {
+  max-height: 500rem;
+  -webkit-mask-image: none;
+  mask-image: none;
+}
+main .content .card #expand-check1,
+main .content .card #expand-check2,
+main .content .card #expand-check3,
+main .content .card #expand-check4,
+main .content .card #expand-check5 {
+  display: none;
 }
 main .content .container {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
   align-items: center;
+}
+main .content figcaption {
+  text-align: center;
+  font-size: 0.8rem;
+}
+main .content .blog-time {
+  font-family: "Monaco", monospace;
+  font-size: 0.7rem;
+  color: rgb(83, 75, 58);
 }
 
 footer {
