--- a/tidy.css
+++ b/tidy.css
@@ -156,6 +156,16 @@ main .content #about-img-cont {
   padding: 0;
   margin: 0;
 }
+main .content .modular {
+  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
+  background-color: white;
+}
+main .content .container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 main .content .card {
   display: flex;
   flex-direction: column;
@@ -213,16 +223,6 @@ main .content .card #expand-check4,
 main .content .card #expand-check5 {
   display: none;
 }
-main .content .modular {
-  box-shadow: 0px 0px 5px rgba(128, 128, 128, 0.669);
-  background-color: white;
-}
-main .content .container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-  align-items: center;
-}
 main .content figcaption {
   text-align: center;
   font-size: 0.8rem;
@@ -237,6 +237,10 @@ main .content .blog-time {
 }
 main .content iframe {
   min-height: 50vh;
+}
+main .logo {
+  width: 50px;
+  border-radius: 0%;
 }
 
 footer {
