--- a/tidy.css
+++ b/tidy.css
@@ -146,7 +146,7 @@ main .content figure {
 }
 main .content figure img {
   border-radius: 1rem 1rem 1rem 1rem;
-  max-width: 100%;
+  width: 100%;
 }
 main .content #about-img-cont {
   display: flex;
@@ -262,18 +262,29 @@ footer #footer-text {
   font-family: "Karla", sans-serif;
 }
 
-@media only screen and (min-width: 768px) {
-  body {
-    font-size: 1.5rem;
+@media only screen and (min-width: 600px) {
+  main .content {
+    flex-direction: row;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    padding: 1rem 3rem;
   }
-  body header {
-    font-size: 3rem;
+  main .content .card {
+    justify-content: center;
+    background-color: red;
+    min-width: 40%;
   }
-  body #main-container #nav-list li {
-    font-size: 2rem;
+  main .content .container {
+    justify-content: space-evenly;
+    width: 100%;
   }
-  body #main-container main .button {
-    font-size: 1.2rem;
+  main .content #about-img-cont img {
+    width: 75%;
+  }
+}
+@media only screen and (min-width: 992) {
+  .card {
+    background-color: blue;
   }
 }
 
